# reves

./: README.md
ci/: ci.sh
ci/inner/: prep.sh  run.sh
podman/debian/: Containerfile  setup.sh
test_workspaces/: deny.toml
test_workspaces/charges/: Cargo.toml
test_workspaces/charges/examples/: orphan_example.rs
test_workspaces/charges/tests/: orphan_test.rs
test_workspaces/doc_broken_link/lamb/: Cargo.toml
test_workspaces/doc_test_ignore_used/: Cargo.toml
test_workspaces/doc_test_ignore_used/chick/: Cargo.toml
test_workspaces/doc_test_ignore_used/lamb/: Cargo.toml
test_workspaces/doc_test_used/bunny/: Cargo.toml
test_workspaces/doc_working_link/lamb/: Cargo.toml
test_workspaces/link_dep/: Cargo.toml
test_workspaces/link_dep/buttercup/: build.rs
test_workspaces/link_dep/lantana/: build.rs
test_workspaces/link_dep/lily/: build.rs
test_workspaces/link_dep_sometimes/: .gitignore
test_workspaces/link_dep_sometimes/buttercup/: Cargo.toml  build.rs
test_workspaces/link_dep_sometimes/lantana/: Cargo.toml  build.rs
test_workspaces/link_dep_sometimes/lily/: Cargo.toml  build.rs
test_workspaces/mislabeled_dev_dep/: Cargo.toml
test_workspaces/mislabeled_dev_dep/barley/: Cargo.toml
test_workspaces/orphans/: Cargo.toml
test_workspaces/rename_crates_unused/: Cargo.toml
test_workspaces/simple_unused/: Cargo.toml
workspace/: Cargo.toml  deny.toml
workspace/hack/: Cargo.toml
workspace/harness/: Cargo.toml
workspace/harness/src/: main.rs
workspace/reves/: Cargo.toml  README.md
workspace/reves/src/: cargo_links.rs  lib.rs  main.rs
(+18 files in other folders)
